--- a/main/templates/advisory_pannel.html
+++ b/main/templates/advisory_pannel.html
@@ -2,7 +2,35 @@
                             <div class="graphs" id="advisory">
                                 <div class="row">
                                     <div class="col-sm-12 text">Crop Advisory Pannel</div>
+                                    <div class="col-sm-12 text-center">
+                                        <table class="table table-responsive col-sm-12">
+                                            <thead>
+                                            <tr class="info">
+                                                <td>Crop</td>
+                                                <td>Raifall Requirement</td>
+                                                <td>Temperatures</td>
+                                                <td>Fertilizer/Ha</td>
+                                                <td>Expected Harvest</td>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                            <tr class="success"><td>Maize</td>
+                                                <td>120mm/yer</td>
+                                                <td>22.2 &deg; C</td>
+                                                <td>2bags</td>
+                                                <td>27bags</td>
+                                            </tr>
+                                            <tr class="success"><td>Wheat</td>
+                                                <td>1167mm/yer</td>
+                                                <td>24.2 &deg; C</td>
+                                                <td>3bags</td>
+                                                <td>22bags</td>
+                                            </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
                                 </div>
+
                             </div>
                         </div>
                         <div class="col-sm-4 right-container">
