--- a/main/templates/advisory_pannel.html
+++ b/main/templates/advisory_pannel.html
@@ -1,77 +1,219 @@
-<div class="col-sm-8 left-container">
-    <div class="graphs" id="advisory">
+{% extends 'base.html' %}
+{% load staticfiles %}
+{% block head %}
+ <title>{% block title %}foreCas{% endblock %}</title>
+
+<style>
+    #map {
+        height: 100%;
+      }
+      /* Optional: Makes the sample page fill the window. */
+
+      #description {
+        font-family: Roboto;
+        font-size: 15px;
+        font-weight: 300;
+      }
+
+      #infowindow-content .title {
+        font-weight: bold;
+      }
+
+      #infowindow-content {
+        display: none;
+      }
+
+      #map #infowindow-content {
+        display: inline;
+      }
+
+      .pac-card {
+        margin: 10px 10px 0 0;
+        border-radius: 2px 0 0 2px;
+        box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        outline: none;
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+        background-color: #fff;
+        font-family: Roboto;
+      }
+
+      #pac-container {
+        padding-bottom: 12px;
+        margin-right: 12px;
+      }
+
+      .pac-controls {
+        display: inline-block;
+        padding: 5px 11px;
+      }
+
+      .pac-controls label {
+        font-family: Roboto;
+        font-size: 13px;
+        font-weight: 300;
+      }
+
+      #pac-input {
+        background-color: #fff;
+        font-family: Roboto;
+        font-size: 15px;
+        font-weight: 300;
+        margin-left: 12px;
+        padding: 0 11px 0 13px;
+        text-overflow: ellipsis;
+        width: 400px;
+      }
+
+      #pac-input:focus {
+        border-color: #4d90fe;
+      }
+
+      #title {
+        color: #fff;
+        background-color: #4d90fe;
+        font-size: 25px;
+        font-weight: 500;
+        padding: 6px 12px;
+      }
+      #target {
+        width: 345px;
+      }
+</style>
+{% endblock %}
+
+
+
+
+{% block  main-body %}
+    <div class="header container-fluid">
         <div class="row">
-            <div class="col-sm-12 text-header text-center" style="padding: 12px">Crop Advisory Pannel</div>
-            <div class="col-sm-12 text-center">
-                <table class="table table-responsive col-sm-12">
-                    <thead>
-                    <tr class="info">
-                        <td>Crop</td>
-                        <td>Raifall Requirement</td>
-                        <td>Temperatures</td>
-                        <td>Fertilizer/Ha</td>
-                        <td>Expected Harvest</td>
+            <div class="col-sm-6"><h4>Advisory pannel </h4></div>
+        </div>
+        <div class="col-sm-6">
+
+        </div>
+
+    </div>
+
+    <div class="main">
+    <div class="row">
+        <div class="col-sm-12 text-header text-center" style="padding: 12px">Crop Advisory Pannel</div>
+        <div class="col-sm-12 text-center">
+            <table class="table table-responsive col-sm-12">
+                <thead>
+                <tr class="info">
+                    <td>Crop</td>
+                    <td>Raifall Requirement</td>
+                    <td>Temperatures</td>
+                    <td>Fertilizer/Ha</td>
+                    <td>Expected Harvest</td>
+                </tr>
+                </thead>
+                <tbody>
+                {% for crop in crop_req %}
+                    <tr class="success">
+                        <td>{{ crop.crop_name }}</td>
+                        <td>{{ crop.rainfall_requirement }}</td>
+                        <td>{{ crop.temp_requirements }} &deg; C</td>
+                        <td>{{ crop.fertilizer_ha }}</td>
+                        <td>27bags</td>
                     </tr>
-                    </thead>
-                    <tbody>
-                    {% for crop in crop_req %}
-                        <tr class="success">
-                            <td>{{ crop.crop_name }}</td>
-                            <td>{{ crop.rainfall_requirement }}</td>
-                            <td>{{ crop.temp_requirements }} &deg; C</td>
-                            <td>{{ crop.fertilizer_ha }}</td>
-                            <td>27bags</td>
-                        </tr>
-                    {% endfor %}
+                {% endfor %}
 
 
-                    </tbody>
-                </table>
-            </div>
-        </div>
-       <div class="row">
-        <div class="col-sm-12">
-{% for key, value in weather_data.items %}
-                {{ key }}: {{ value }}
-        {% endfor %}
-
-        </div>
-    </div>
-
-
-    </div>
-</div>
-<div class="col-sm-4 right-container">
-    <div id="aside">
-        <div class="row">
-            <div class="col-sm-12 text-center"><h3>Climatic Stats</h3></div>
-        </div>
-        <div class="row">
-            <div class="col-sm-6">April May Rains</div>
-            <div class="col-sm-6">122mm</div>
-            <br>
-            <div class="col-sm-6">May June Rains</div>
-            <div class="col-sm-6">122mm</div>
-            <br>
-            <div class="col-sm-6">July August Rains</div>
-            <div class="col-sm-6">122mm</div>
-        </div>
-        <div class="row">
-            <div class="col-sm-12 text-center" id="title">Estimated Crop Yield</div>
-
-            <div class="col-sm-12">
-                <div class="row">
-                    <div class="col-sm-6 text-info center">Maize:</div>
-                    <div class="col-sm-6 text-justify"></div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-6 text-info center">Maize:</div>
-                    <div class="col-sm-6 text-justify"></div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-12">Productions By Regions</div>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
+{% endblock %}
+{% block body-bottom %}
+    <div class="row" style="margin-bottom: 70px; scroll-padding: 15px;">
+      <div class="col-sm-8 text-center "style="background-color: #ffffff">
+          <input id="pac-input" class="controls " type="text" placeholder="Search Region " style=" border-radius: 2px; margin-bottom: 10px;">
+            <div id="googleMap" style="height: 400px; width: 100%;"></div>
+
+            </div>
+        <div class="col-sm-4" style="background: rgba(68,227,9,0.99); height: 100px">
+
+        </div>
+    </div>
+
+{% endblock %}
+{% block Javascript %}
+<script>
+ function initAutocomplete() {
+        var map = new google.maps.Map(document.getElementById('googleMap'), {
+          center: {lat: 0.5143, lng: 35.2697},
+          zoom: 13
+
+        });
+        var input = document.getElementById('pac-input');
+        var searchBox = new google.maps.places.SearchBox(input);
+        map.controls[google.maps.ControlPosition.TOP_LEFT].push(input);
+
+        // Bias the SearchBox results towards current map's viewport.
+        map.addListener('bounds_changed', function() {
+          searchBox.setBounds(map.getBounds());
+        });
+
+        var markers = [];
+        // Listen for the event fired when the user selects a prediction and retrieve
+        // more details for that place.
+        searchBox.addListener('places_changed', function() {
+          var places = searchBox.getPlaces();
+
+          if (places.length == 0) {
+            return;
+          }
+
+          // Clear out the old markers.
+          markers.forEach(function(marker) {
+            marker.setMap(null);
+          });
+          markers = [];
+
+          // For each place, get the icon, name and location.
+          var bounds = new google.maps.LatLngBounds();
+          places.forEach(function(place) {
+            if (!place.geometry) {
+              console.log("Returned place contains no geometry");
+              return;
+            }
+            var icon = {
+              url: place.icon,
+              size: new google.maps.Size(71, 71),
+              origin: new google.maps.Point(0, 0),
+              anchor: new google.maps.Point(17, 34),
+              scaledSize: new google.maps.Size(25, 25)
+            };
+
+            // Create a marker for each place.
+            markers.push(new google.maps.Marker({
+              map: map,
+              icon: icon,
+              title: place.name,
+              position: place.geometry.location
+            }));
+
+            if (place.geometry.viewport) {
+              // Only geocodes have viewport.
+              bounds.union(place.geometry.viewport);
+            } else {
+              bounds.extend(place.geometry.location);
+            }
+          });
+          map.fitBounds(bounds);
+        });
+      }
+
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBXJsTvI_fsJz1fe4RDZY5XEaQ8KEouS78&region=KE&libraries=places&callback=initAutocomplete"
+         async defer></script>
+{% endblock %}
+
+
+
+
+
